tests/baselines/reference/exportSpecifierReferencingOuterDeclaration4.errors.txt
exportSpecifierReferencingOuterDeclaration2_A.ts(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
exportSpecifierReferencingOuterDeclaration2_B.ts(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
exportSpecifierReferencingOuterDeclaration2_B.ts(4,34): error TS2694: Namespace 'X' has no exported member 'bar'.


==== exportSpecifierReferencingOuterDeclaration2_A.ts (1 errors) ====
    declare module X { export interface bar { } }
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
==== exportSpecifierReferencingOuterDeclaration2_B.ts (2 errors) ====
    declare module X { export interface foo { } }
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    export { X };
    export declare function foo(): X.foo;
    export declare function bar(): X.bar; // error
                                     ~~~
!!! error TS2694: Namespace 'X' has no exported member 'bar'.